<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textlayoutrow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textviewrow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="right"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/textviewrow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="="
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >


        <Button
            android:id="@+id/switchside"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"

            android:textSize="25sp"
            android:background="@drawable/change"
            />



        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/reset"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/plusminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/plusminus"
            android:textSize="35sp"
            android:background="@drawable/button"
            />
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/delete"
            android:textSize="40sp"
            android:background="@drawable/button"
            />
    </LinearLayout>
    <LinearLayout
    android:id="@+id/buttonrow2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".1" >

        <Button
            android:id="@+id/memreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/memreset"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/addmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/addmem"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/minusmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/minusmem"
            android:textSize="35sp"
            android:background="@drawable/button"

            />

        <Button
            android:id="@+id/recallmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/recallmem"
            android:textSize="35sp"
            android:background="@drawable/button"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b7"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b8"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b9"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/bdivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bdivide"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b4"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b5"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b6"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/bmultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bmultiply"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b3"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b2"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b1"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/bminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bminus"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >



        <Button
            android:id="@+id/bdot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bdot"
            android:textSize="45sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/b0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/b0"
            android:textSize="35sp"
            android:background="@drawable/buttonred"
            />

        <Button
            android:id="@+id/bequal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bequal"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
        <Button
            android:id="@+id/badd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/badd"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
</LinearLayout>
