<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/textlayoutrow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textviewrow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="right"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/textviewrow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="="
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/switchside"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="25sp"
            android:background="@drawable/change"

            />


        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/reset"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/plusminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/plusminus"
            android:textSize="35sp"
            android:background="@drawable/button"
            />
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/delete"
            android:textSize="40sp"
            android:background="@drawable/button"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/memreset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/memreset"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/addmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/addmem"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/minusmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/minusmem"
            android:textSize="35sp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/recallmem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/recallmem"
            android:textSize="35sp"
            android:background="@drawable/button"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button android:textAllCaps="false"
            android:id="@+id/bsin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bsin"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/bcos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bcos"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/btan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/btan"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/bimaginary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bimaginary"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button android:textAllCaps="false"
            android:id="@+id/bln"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bln"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/blog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/blog"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/bpi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bpi"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button android:textAllCaps="false"
            android:id="@+id/bexponent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bexponent"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >

        <Button
            android:id="@+id/bpercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bpercent"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button
            android:id="@+id/bfact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bfact"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button
            android:id="@+id/bsroot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bsroot"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />

        <Button
            android:id="@+id/bpower"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/bpower"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonrow6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" >



        <Button
            android:id="@+id/bleftparen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/bleftparen"
            android:textSize="45sp"
            android:background="@drawable/buttongreen"
            />

        <Button
            android:id="@+id/brightparen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/brightparen"
            android:textSize="35sp"
            android:background="@drawable/buttongreen"
            />


    </LinearLayout>
</LinearLayout>